--- a/mineSweeper.ipynb
+++ b/mineSweeper.ipynb
@@ -6,7 +6,7 @@
       "name": "mineSweeper.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOE3ScEMDPIwMtmZVHKHs2m",
+      "authorship_tag": "ABX9TyOEIIBsqtkHddzTGY3gV0sg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,25 +32,138 @@
       "cell_type": "code",
       "source": [
         "import random \n",
-        "import numpy as np\n",
-        "internalRepresentation = []"
+        "import numpy as np\n"
       ],
       "metadata": {
         "id": "Igrz4xITJiLE"
       },
-      "execution_count": 6,
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def getCellIntersection(values, cells):\n",
+        "  cellIntersection = []\n",
+        "  for cell in cells:\n",
+        "    if cell.value == "
+      ],
+      "metadata": {
+        "id": "BDE-X4XVlLwu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def intersection(lst1, lst2):\n",
+        "  return set(lst1).intersection(lst2)"
+      ],
+      "metadata": {
+        "id": "2-c1JDn0PKbj"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TODO: sistemare l'aggiornamento della knowledge base\n",
+        "def removePositiveproposition(knowledge, currentCells, currentIndex, dictionary):\n",
+        "  for i,cells in enumerate(knowledge.totalCells):\n",
+        "    if i != currentIndex:\n",
+        "      intersection = removeAndUpdateProposition(knowledge, currentCells, cells, dictionary, i)\n",
+        "      knowledge.totalCells[index] = list(set(knowledge.totalCells[index]) - set(intersection))"
+      ],
+      "metadata": {
+        "id": "9_oL4RVprtJs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeNegativeProposition(knowledge, currentCells, currentIndex, dictionary):\n",
+        "  for i,cells in enumerate(knowledge.totalCells):\n",
+        "    if i != currentIndex:\n",
+        "      removeAndUpdateProposition(knowledge, currentCells, dictionary,i)\n",
+        "      knowledge.count[i] -= currentCells.value"
+      ],
+      "metadata": {
+        "id": "Wnt33hl6NHnv"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeAndUpdateProposition(knowledge, currentCells, cells, dictionary, index):\n",
+        "\n",
+        "  print(\"rimuovo proposizioni\")\n",
+        "  propIntersection = intersection([prop1 for prop1 in cells.proposition], [prop2 for pop2 in currentCells.proposition])\n",
+        "  cellIntersection = [dictionary[prop] for prop in propIntersection]\n",
+        "  print(\"intersezione tra \", [prop1 for prop1 in cells.proposition], \" e \",[prop2 for pop2 in currentCells.proposition], \" é \", propIntersection)\n",
+        "  return cellIntersection\n",
+        " "
+      ],
+      "metadata": {
+        "id": "6ccEgqcsL0Ew"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def updateKnowledge(knowledge,board):\n",
+        "  for i,cells in enumerate(knowledge.totalCells):\n",
+        "      if knowledge.count[i] == 0:\n",
+        "        print(\"trovato celle con counter 0\")\n",
+        "        for cell in cells:\n",
+        "          cell.safe = 1\n",
+        "        removePositiveProposition(knowledge, cells, i, board)\n",
+        "      if knowledge.count[i] == len(cells):\n",
+        "        for cell in cells:\n",
+        "          cell.safe = 0\n",
+        "          cell.proposition = -cell.proposition\n",
+        "      removeNegativeProposition(knowledge, cells, i,board)"
+      ],
+      "metadata": {
+        "id": "-LixDlcebMfF"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def buildCellDictionary(board):\n",
+        "  dictionary = {}\n",
+        "  for row in range(SIZE):\n",
+        "    for col in range(SIZE):\n",
+        "      dictionary[codeProposition(row, col)] = createCell(board[row,col], row, col)\n",
+        "  \n",
+        "  return dictionary\n"
+      ],
+      "metadata": {
+        "id": "swSXjJJEMl7H"
+      },
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def codeProposition(value1, value2):\n",
-        "  pass"
+        "  return value1 * SIZE + value2"
       ],
       "metadata": {
         "id": "YQ3hswZcA3_I"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -62,19 +175,29 @@
       "metadata": {
         "id": "9mhoVhjEAuV-"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def createKnowledge(cell, board):\n",
-        "  pass"
+        "def createKnowledge(cell, board, knowledge):\n",
+        "  print(\"creo knowledge della cella in posizione: \", cell.row, \" \", cell.col)\n",
+        "  currentKnowledge = []\n",
+        "  value = cell.value\n",
+        "  for i in range(3):\n",
+        "    for j in range(3):\n",
+        "     if (cell.row-1+i >= 0 and cell.row-1+i <= SIZE-1) and (cell.col-1+j >= 0 and cell.col-1+j <= SIZE-1):\n",
+        "       currentKnowledge.append(board[codeProposition(cell.row-1+i,cell.col-1+j)])\n",
+        "  \n",
+        "  knowledge.totalCells.append(currentKnowledge)\n",
+        "  knowledge.count.append(cell.value)\n",
+        "  updateKnowledge(knowledge,board)\n"
       ],
       "metadata": {
         "id": "POJFSdT9UtuU"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -86,7 +209,7 @@
       "metadata": {
         "id": "7_85_Nx4-mty"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -103,7 +226,7 @@
       "metadata": {
         "id": "Gj_TuZJD7gSt"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -125,7 +248,7 @@
       "metadata": {
         "id": "f8AqwGfEyGxo"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -147,7 +270,7 @@
       "metadata": {
         "id": "rqy8GPCQNp84"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -178,59 +301,7 @@
       "metadata": {
         "id": "C8ZoquJ7Fof6"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LXz1On0Jwf1q",
-        "outputId": "d288d967-7696-45e9-cbcb-b59ad732c416"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "inizializzo board di gioco\n",
-            "board di gioco inizializzata con  14   mine\n",
-            "[[ 0.  0.  0.  1. -1.  1.  1. -1. -1.]\n",
-            " [ 0.  0.  0.  2.  2.  2.  1.  3. -1.]\n",
-            " [ 0.  0.  0.  2. -1.  3.  1.  1.  1.]\n",
-            " [ 1.  1.  1.  3. -1. -1.  1.  0.  0.]\n",
-            " [ 2. -1.  1.  2. -1.  4.  2.  1.  0.]\n",
-            " [-1.  2.  1.  1.  1.  2. -1.  2.  1.]\n",
-            " [ 1.  1.  0.  0.  0.  1.  3. -1.  2.]\n",
-            " [ 0.  1.  1.  1.  0.  0.  2. -1.  2.]\n",
-            " [ 0.  1. -1.  1.  0.  0.  1.  1.  1.]]\n"
-          ]
-        }
-      ],
-      "source": [
-        "#build a 9x9 board\n",
-        "SIZE = 9\n",
-        "bomb_probability = 1/6\n",
-        "board = buildBoard(SIZE, bomb_probability)\n",
-        "print(board)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Cell:\n",
-        "  def __init__(self) -> None:\n",
-        "    self.safe = 0\n",
-        "    self.value = 0\n",
-        "    self.proposition = 0"
-      ],
-      "metadata": {
-        "id": "bvz4IOk15clD"
-      },
-      "execution_count": 4,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -239,25 +310,38 @@
         "def createCell(value, row, col):\n",
         "  cell = Cell()\n",
         "  cell.value = value\n",
-        "  cell.safe = 1\n",
-        "  cell.proposition = codeProposition(row,col)"
+        "  if cell.value >= 0:\n",
+        "    cell.safe = 1\n",
+        "  else:\n",
+        "    cell.safe = 0\n",
+        "    \n",
+        "  cell.selected = 0\n",
+        "  cell.row = row\n",
+        "  cell.col = col\n",
+        "\n",
+        "  cell.proposition = codeProposition(row,col)\n",
+        "  return cell"
       ],
       "metadata": {
         "id": "MOYsvsfKAhGj"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def startGame(board):\n",
+        "def startGame(board, knowledge):\n",
         "  result = \"\"\n",
-        "  firstCell = createCell(board[0,0], 0,0)\n",
+        "  firstCell = board[codeProposition(0,0)]\n",
+        "  firstCell.selected = 1\n",
+        "\n",
         "  if firstCell.value == -1:\n",
         "    result = \"lose\"\n",
         "  else:\n",
-        "    createKnowledge(firstCell, board)\n",
+        "    createKnowledge(firstCell, board, knowledge)\n",
+        "\n",
+        " \n",
         "\n",
         "  while not(result == \"win\") and not(result == \"lose\"):\n",
         "    \n",
@@ -265,13 +349,60 @@
         "    if cell.value == -1:\n",
         "      result = \"lose\"\n",
         "    else:\n",
-        "      createKnowledge(cell, board)\n",
+        "      createKnowledge(cell, board, knowledge)\n",
         "\n",
         "\n",
         "  return result"
       ],
       "metadata": {
         "id": "fc8d0djV406l"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class InternalRepresentation:\n",
+        "  def __init__(self) -> None:\n",
+        "    self.totalCells = []\n",
+        "    self.count = []"
+      ],
+      "metadata": {
+        "id": "Klb6U-jLlhHi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Cell:\n",
+        "  def __init__(self) -> None:\n",
+        "    self.safe = 0\n",
+        "    self.value = 0\n",
+        "    self.proposition = 0\n",
+        "    self.selected = 0\n",
+        "    self.row = 0\n",
+        "    self.col = 0"
+      ],
+      "metadata": {
+        "id": "o6LZuAXRlhrP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#build a 9x9 board\n",
+        "SIZE = 9\n",
+        "bomb_probability = 1/6\n",
+        "board = buildBoard(SIZE, bomb_probability)\n",
+        "print(board)"
+      ],
+      "metadata": {
+        "id": "9EwPzHazldrG"
       },
       "execution_count": null,
       "outputs": []
@@ -280,23 +411,38 @@
       "cell_type": "code",
       "source": [
         "#start game from the up-left corner\n",
-        "result = startGame(board)\n",
+        "knowledge = InternalRepresentation();\n",
+        "boardDictionary = buildCellDictionary(board)\n",
+        "result = startGame(boardDictionary, knowledge)\n",
         "print(result)      "
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 376
         },
         "id": "zFypVh6jCALH",
-        "outputId": "9dc5e9a6-c945-41bb-8886-0113ddd1cf26"
+        "outputId": "e5e08bd6-7e1d-405f-f4fb-187649fab132"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "lose\n"
+            "creo knowledge della cella in posizione:  0   0\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-45-9ffc0adea1f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mknowledge\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInternalRepresentation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mboardDictionary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuildCellDictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstartGame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboardDictionary\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mknowledge\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-44-d87297c3a0fe>\u001b[0m in \u001b[0;36mstartGame\u001b[0;34m(board, knowledge)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mcell\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselectNextSafeCell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"lose\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'value'"
           ]
         }
       ]
